--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -122,26 +122,30 @@
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
+  display: grid;
+  
+  grid-template-rows: 1fr 1fr 1fr;
 }
 .red5 { 
-  width: 100px; 
+  width: 100%; 
   height: 100px; 
   background-color: red; 
 } 
 .green5 { 
-  width: 100px; 
-  height: 100px; 
-  background-color: green; 
+  width: 200px; 
+  height: 200px; 
+  background-color: green;
+  float: left; 
 
 } 
 .yellow5 {
-  width: 100px; 
-  height: 100px; 
+  width: 100%; 
+  height: 100%; 
   background-color: gold; 
 
 } 
 .blue5 {
-  width: 100px; 
+  width: 100; 
   height: 100px; 
   background-color: blue; 
 } 
