--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -122,9 +122,7 @@
 .content5 {
   /* This is the parent of the activity 5 boxes. */
   height: 400px;
-  display: grid;
-  
-  grid-template-rows: 1fr 1fr 1fr;
+
 }
 .red5 { 
   width: 100%; 
@@ -140,7 +138,7 @@
 } 
 .yellow5 {
   width: 100%; 
-  height: 100%; 
+  height: 250px; 
   background-color: gold; 
 
 } 
@@ -152,26 +150,31 @@
 /* Activity 6 styles */ 
 .content6 {
   /* This is the parent of the activity 6 boxes. */
+  display: grid;
+  grid-template-columns: 50px 50px 50px 50px ;
+  grid-template-rows: 50px 50px 50px 50px ;
 }
 .red6 {
-  width: 100px; 
-  height: 100px; 
+  width: 400px; 
+  height: 200px; 
   background-color: red; 
 } 
 .green6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 200px; 
   background-color: green; 
 } 
 .yellow6 {
-  width: 100px; 
-  height: 100px; 
+  width: 200px; 
+  height: 400px; 
   background-color: gold; 
 } 
 .blue6 {
-  width: 100px; 
-  height: 100px; 
+  width: 400px; 
+  height: 400px; 
   background-color: blue; 
+  grid-column: 2/4;
+  grid-row: 2/4;
 } 
 
 
