--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -95,13 +95,12 @@
   height: 400px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
 }
 .red4 {
   width: 100%; 
   height: 100%; 
   background-color: red; 
-  grid-row:1/-1 ;
+  grid-row:1/4 ;
 } 
 .green4 {
   width: 100%; 
@@ -151,30 +150,37 @@
 .content6 {
   /* This is the parent of the activity 6 boxes. */
   display: grid;
-  grid-template-columns: 50px 50px 50px 50px ;
-  grid-template-rows: 50px 50px 50px 50px ;
+  grid-template-columns: 100px 100px 100px 100px 100px 100px;
 }
 .red6 {
   width: 400px; 
   height: 200px; 
   background-color: red; 
+  grid-column: 1/5;
+  grid-row: 1/3;
+  z-index: -1;
 } 
 .green6 {
   width: 200px; 
   height: 200px; 
-  background-color: green; 
+  background-color: green;
+  grid-column: 1/3;
+  grid-row: 5/7;
 } 
 .yellow6 {
   width: 200px; 
   height: 400px; 
   background-color: gold; 
+  grid-column: -1/-3;
+  grid-row: 3/7;
 } 
 .blue6 {
   width: 400px; 
   height: 400px; 
   background-color: blue; 
-  grid-column: 2/4;
-  grid-row: 2/4;
+  grid-column: 2/6;
+  grid-row: 2/6;
+  z-index: -1;
 } 
 
 
