--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -6,25 +6,25 @@ Fonts are separated by a & */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #14213D   ;
+  --secondary-color: #134266 ;
+  --accent1-color: #A33B20;
+  --accent2-color: #D6D5C9;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon";
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #14213D;  /* headlines on a white background */ 
+  --headline-color-on-color: #D6D5C9; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #14213D; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #D6D5C9; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #134266 ;
+  --nav-link-color: #14213D;
+  --nav-background-color: #A33B20;
+  --nav-hover-link-color: #D6D5C9;
+  --nav-hover-background-color: #134266;
 }
 
 
