--- a/testimonialcard/styles/style.css
+++ b/testimonialcard/styles/style.css
@@ -48,6 +48,11 @@ p {
 
 }
 
+.boxes {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
 .black_box {
     background-color: black;
     height: 30px;
