--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,6 +5,17 @@
     margin: 0 auto;
 }
 
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
+nav a:hover {
+    background-color: #A33B20;
+    color: #D6D5C9;
+}
+
 nav a {
     text-align: center;
     color: #D6D5C9;
@@ -12,14 +23,37 @@ nav a {
     padding: 35px;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+             
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
+             
 #hero-msg h1 {
     text-align: center;
 }
 
 #hero-msg h4 {
     text-align: center;
+    color: #D6D5C9;
 }
 
+#hero-img {
+    width: 100%;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+             
 .button-box {
     text-align: center;
 }
@@ -34,6 +68,8 @@ main section img {
 
 #background {
     height: 725px;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body {
@@ -49,12 +85,9 @@ h2 {
 }
 
 header {
+    display: grid;
+    grid-template-columns: 150px auto;
     background-color: #134266;
-}
-
-nav a:hover {
-    background-color: #A33B20;
-    color: #D6D5C9;
 }
 
 .book, .join {
@@ -77,9 +110,12 @@ nav a:hover {
 }
 
 .msg {
-    background-color:  #134266;
+    background-color: #14213D;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px black;
 }
 
 .msg h2 {
@@ -97,6 +133,9 @@ footer {
     color: #D6D5C9;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 footer a {
@@ -127,8 +166,30 @@ footer .social img {
     margin-top: 10px;
 }
 
-.rivers-card, .camping-card, .rapids-card  {
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+
+.rivers-card {
+    color: #D6D5C9;
     margin: 200px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card{
+    color: #D6D5C9;
+    margin: 200px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    color: #D6D5C9;
+    margin: 200px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
 }
 
 h4 {
@@ -141,6 +202,8 @@ h4 {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 .icon {
@@ -148,10 +211,65 @@ h4 {
     padding-top: 10px;
 }
 
-#hero-img {
+.card-img {
     width: 100%;
+    border: 10px solid #d9c2a3;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
-.card-img {
-    border: 10px solid #d9c2a3;
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
 }
+
+.mountains {
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px black;
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
+}
+            
