--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -230,6 +230,170 @@ h4 {
     box-shadow: 5px 5px 10px black;
 }
 
+/* Sub page CSS */
+
+#rivers_content {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+
+#large_river {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+}
+
+#large_river_img{
+    grid-row: 2/-1;
+    grid-column: 1/-1;
+    width: 100%;
+    margin-bottom: 100px;
+}
+
+#large_river_title{
+    color: #FCE172;
+    font-family: 'Bebas Neue', 'Bradley Hand', sans-serif;
+    font-size: 6em;
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+    text-align: center;
+}
+
+.rivers_sections {
+    margin-bottom: 100px;
+}
+
+.idaho_river {
+    margin: 100px;
+    margin-bottom: 200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    color: #D6D5C9;
+}
+
+.idaho_river h1 {
+    grid-column: 2/4;
+    color: #FCE172;
+    font-family: 'Bebas Neue', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.idaho_river a {
+    grid-column: 4/5;
+    justify-self: left;
+    align-self: left;
+}
+
+.idaho_river p {
+    line-height: 1.5em;
+    font-size: .9em;
+}
+
+.idaho_river p:nth-of-type(1) {
+    grid-column: 3/5;
+    margin-top: 0px;
+    padding-left: 50px;
+}
+
+.idaho_river p:nth-of-type(2) {
+    grid-column: 1/-1;
+}
+
+.salmon_river_img {
+    grid-column: 1/3;
+    box-shadow: 5px 5px 10px black;
+}
+
+.utah_river {
+    padding: 200px;
+    background-color: #134266;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.utah_river h1 {
+    grid-column: 1/3;
+    color: #FCE172;
+    font-family: 'Bebas Neue', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.utah_river a {
+    grid-column: 3/4;
+    justify-self: left;
+    align-self: left;
+}
+
+.gray_canyon_img {
+    grid-column: 4/-1;
+    size: 100%;
+    box-shadow: 5px 5px 10px black;
+}
+
+.utah_river p {
+    background-color: #A33B20;
+    color: #D6D5C9;
+    grid-column: 1/5;
+    line-height: 1.5em;
+    font-size: .9em;
+    padding: 35px;
+    box-shadow: 5px 5px 10px black;
+    margin-top: -150px;
+}
+
+.arizona_river {
+    margin: 100px;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    color: #D6D5C9;
+}
+
+.arizona_river h1 {
+    grid-column: 2/3;
+    color: #FCE172;
+    font-family: 'Bebas Neue', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+    text-align: center;
+    padding-bottom: 25px;
+}
+
+.arizona_river a {
+    grid-column: 3/4;
+    justify-self: left;
+    align-self: left;
+}
+
+.grand_canyon_img {
+    grid-column: 1/-1;
+    size: 100%;
+    justify-self: center;
+    align-self: center;
+    box-shadow: 5px 5px 10px black;
+}
+
+.arizona_river p {
+    padding: 50px;
+}
+
+.arizona_river p:nth-of-type(1) {
+    margin-left: 50px;
+    background-color: #134266;
+    border: 5px solid #A33B20;
+    box-shadow: 5px 5px 10px black;
+}
+
+.arizona_river p:nth-of-type(3) {
+    margin-right: 50px;
+    background-color: #134266;
+    border: 5px solid #A33B20;
+    box-shadow: 5px 5px 10px black;
+}
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
