--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -242,14 +242,14 @@ h4 {
     grid-template-columns: 1fr 3fr 1fr;
 }
 
-#large_river_img{
+#large_river_img {
     grid-row: 2/-1;
     grid-column: 1/-1;
     width: 100%;
     margin-bottom: 100px;
 }
 
-#large_river_title{
+#large_river_title {
     color: #FCE172;
     font-family: 'Bebas Neue', 'Bradley Hand', sans-serif;
     font-size: 6em;
@@ -271,7 +271,7 @@ h4 {
     color: #D6D5C9;
 }
 
-.idaho_river h1 {
+.idaho_river h2 {
     grid-column: 2/4;
     color: #FCE172;
     font-family: 'Bebas Neue', 'Bradley Hand', sans-serif;
@@ -283,18 +283,17 @@ h4 {
 .idaho_river a {
     grid-column: 4/5;
     justify-self: left;
-    align-self: left;
 }
 
 .idaho_river p {
     line-height: 1.5em;
-    font-size: .9em;
+    font-size: .85em;
 }
 
 .idaho_river p:nth-of-type(1) {
     grid-column: 3/5;
     margin-top: 0px;
-    padding-left: 50px;
+    padding-left: 80px;
 }
 
 .idaho_river p:nth-of-type(2) {
@@ -307,13 +306,13 @@ h4 {
 }
 
 .utah_river {
-    padding: 200px;
+    padding: 200px 100px 200px 100px;
     background-color: #134266;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
-.utah_river h1 {
+.utah_river h2 {
     grid-column: 1/3;
     color: #FCE172;
     font-family: 'Bebas Neue', 'Bradley Hand', sans-serif;
@@ -325,12 +324,11 @@ h4 {
 .utah_river a {
     grid-column: 3/4;
     justify-self: left;
-    align-self: left;
 }
 
 .gray_canyon_img {
     grid-column: 4/-1;
-    size: 100%;
+    width: 100%;
     box-shadow: 5px 5px 10px black;
 }
 
@@ -339,10 +337,10 @@ h4 {
     color: #D6D5C9;
     grid-column: 1/5;
     line-height: 1.5em;
-    font-size: .9em;
-    padding: 35px;
+    font-size: .85em;
+    padding: 25px;
     box-shadow: 5px 5px 10px black;
-    margin-top: -150px;
+    margin-top: -175px;
 }
 
 .arizona_river {
@@ -354,7 +352,7 @@ h4 {
     color: #D6D5C9;
 }
 
-.arizona_river h1 {
+.arizona_river h2 {
     grid-column: 2/3;
     color: #FCE172;
     font-family: 'Bebas Neue', 'Bradley Hand', sans-serif;
@@ -366,30 +364,30 @@ h4 {
 .arizona_river a {
     grid-column: 3/4;
     justify-self: left;
-    align-self: left;
 }
 
 .grand_canyon_img {
     grid-column: 1/-1;
-    size: 100%;
     justify-self: center;
     align-self: center;
     box-shadow: 5px 5px 10px black;
 }
 
 .arizona_river p {
-    padding: 50px;
+    padding: 20px;
+    font-size: .85em;
+    margin-top: 50px;
 }
 
 .arizona_river p:nth-of-type(1) {
-    margin-left: 50px;
+    margin-left: 30px;
     background-color: #134266;
     border: 5px solid #A33B20;
     box-shadow: 5px 5px 10px black;
 }
 
 .arizona_river p:nth-of-type(3) {
-    margin-right: 50px;
+    margin-right: 30px;
     background-color: #134266;
     border: 5px solid #A33B20;
     box-shadow: 5px 5px 10px black;
