--- a/finalproject/styles/style.css
+++ b/finalproject/styles/style.css
@@ -12,7 +12,6 @@ header {
     margin: 0 auto;
 }
 
-
 nav {
     display: flex;
     justify-content: space-around;
@@ -272,7 +271,7 @@ footer .social img {
     box-shadow: 5px 5px 10px black;
 }
 
-.fish-lures{
+.fish-lures {
     background-color: #8D5B4C;
     margin-bottom: 50px;
     padding: 150px 0 150px 0;
@@ -304,4 +303,198 @@ footer .social img {
 .fish-lures a h2:hover {
     transition: transform .5s;
     transform: scale(1.1);
+}
+
+/* CSS for Fish and Lures Page */
+
+#fish-lures-hero {
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr;
+    margin-top: -100px;
+}
+
+#fish-lures-hero-box {
+    grid-column: 1/4;
+    grid-row: 1/6;
+    z-index: -1;
+}
+             
+#fish-lures-hero-img {
+    width: 100%;
+}
+
+#fish-lures-hero-msg {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-top: 50%;
+}
+             
+#fish-lures-hero-msg h1 {
+    background-color: #8D5B4C;
+    border: 10px solid #3F612D;
+    width: 400px;
+    text-align: center;
+    color: #FFC914;
+    font-family: 'Bangers';
+    font-size: 3em;
+    margin-top: 10px;
+    padding: 35px;
+    text-shadow: 5px 5px 10px black;
+}
+
+.brown {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+    margin-top: 200px;
+    padding: 150px 0 150px 0;
+    background-color: #8D5B4C;
+}
+
+.brown h2 {
+    grid-column: 7/10;
+    grid-row: 1/2;
+    color: #FFC914;
+    font-family: 'bangers';
+    font-size: 2.5em;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.brown img {
+    grid-column: 2/6;
+    grid-row: 1/3;
+    box-shadow: 5px 5px 10px black;
+}
+
+.brown p {
+    grid-column: 7/10;
+    grid-row: 2/3;
+    color: #D6D5C9;
+}
+
+.cutthroat {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+    margin-bottom: 0px;
+    padding: 150px 0 150px 0;
+}
+
+.cutthroat h2 {
+    grid-column: 2/5;
+    grid-row: 1/2;
+    color: #FFC914;
+    font-family: 'bangers';
+    font-size: 2.5em;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.cutthroat img {
+    grid-column: 5/10;
+    grid-row: 1/3;
+    margin-top: 50px;
+    margin-left: 50px;
+    box-shadow: 5px 5px 10px black;
+}
+
+.cutthroat p {
+    grid-column: 2/5;
+    grid-row: 2/3;
+    color: #D6D5C9;
+}
+
+.rainbow {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+    padding: 150px 0 150px 0;
+    background-color: #8D5B4C;
+}
+
+.rainbow h2 {
+    grid-column: 2/6;
+    grid-row: 1/2;
+    color: #FFC914;
+    font-family: 'bangers';
+    font-size: 2.5em;
+    margin: 0 -100px 0 0;
+}
+
+.rainbow img {
+    grid-column: 2/6;
+    grid-row: 2/3;
+    box-shadow: 5px 5px 10px black;
+}
+
+.rainbow p {
+    grid-column: 7/10;
+    grid-row: 1/3;
+    color: #D6D5C9;
+}
+
+.perch {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    text-align: center;
+    padding: 150px 0 150px 0;
+}
+
+.perch h2 {
+    grid-column: 5/10;
+    grid-row: 3/4;
+    color: #FFC914;
+    font-family: 'bangers';
+    font-size: 2.5em;
+    margin: 0;
+    text-shadow: 5px 5px 10px black;
+    z-index: 2;
+}
+
+.perch img {
+    grid-column: 2/6;
+    grid-row: 1/5;
+    box-shadow: 5px 5px 10px black;
+}
+
+.perch p {
+    grid-column: 5/10;
+    grid-row: 4/6;
+    color: #D6D5C9;
+    text-shadow: 5px 5px 10px black;
+}
+
+.whitefish {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    background-color: #8D5B4C;
+    text-align: center;
+    padding: 150px 0 150px 0;
+}
+
+.whitefish h2 {
+    grid-column: -5/-10;
+    grid-row: 3/4;
+    color: #FFC914;
+    font-family: 'bangers';
+    font-size: 2.5em;
+    margin: 0;
+    text-shadow: 5px 5px 10px black;
+    z-index: 2;
+}
+
+.whitefish img {
+    grid-column: 6/9;
+    grid-row: 1/5;
+    width: 600px;
+    box-shadow: 5px 5px 10px black;
+    margin-left: -100px;
+}
+
+.whitefish p {
+    grid-column: -5/-10;
+    grid-row: 4/6;
+    color: #D6D5C9;
+    text-shadow: 5px 5px 10px black;
 }
