--- a/finalproject/styles/style.css
+++ b/finalproject/styles/style.css
@@ -226,6 +226,7 @@ footer .social img {
     padding: 35px;
     background-color: #3F612D;
     color: #D6D5C9;
+    font-size: 0.85em;
     grid-column: 2/-2;
     grid-row: 3/4;
     box-shadow: 5px 5px 10px black;
@@ -234,7 +235,6 @@ footer .social img {
 .eagle-park{
     background-color: #8D5B4C;
     margin-bottom: 50px;
-    /* padding-top: 50px; */
     padding-bottom: 50px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -266,6 +266,7 @@ footer .social img {
     padding: 15px;
     background-color: #3F612D;
     color: #D6D5C9;
+    font-size: 0.85em;
     grid-column: 5/-2;
     grid-row: 3/4;
     box-shadow: 5px 5px 10px black;
